Fix vertical alignment of last carousel well

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,6 +81,10 @@ header {
     font-size: 1.5em;
 }
 
+#last-carousel-well {
+    padding-top: 5px;
+}
+
 /* Homepage blocks */
 
 .homepage-block {
